-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
ClusterScalability 16Feb-2Mar
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
After SERVER-119049 updated createIndexes to use localReshardingRegistry, a small window was introduced between coordinator initialization and participant registry population during which index builds can start. When the oplog applier replicates this index build to a secondary, it may trigger throwIfReshardingInProgress() after the registry is populated, causing a fatal reshardCollectionInProgress assertion.
Secondaries should successfully replicate the index build once the primary has decided to begin it, so the resharding check should be skipped on secondaries. The resharding operation will abort automatically after detecting the conflicting index build.
- is related to
-
SERVER-119049 Make IndexBuildsCoordinator use resharding registry
-
- Closed
-