SERVER-120512 Skip resharding check during index build replication on secondaries (#48754)

GitOrigin-RevId: cf4c5c453e594d97af359f6347fa8e592b5e400d